# rules_typescript_proto

./: BUILD.bazel  README.md  WORKSPACE  index.bzl  package.json
src/: BUILD.bazel  rules_typescript_proto_dependencies.bzl  typescript_grpc_node_library.bzl  typescript_proto_build.bzl  typescript_proto_library.bzl
test/: BUILD.bazel
