load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

js_binary(
    name = "change_import_style",
    data = [":tsconfig"],
    chdir = package_name(),
    visibility = ["//visibility:public"],
    entry_point = ":change_import_style.ts"
)

ts_project(
    name = "change_import_style_lib",
    srcs = [
        "change_import_style.ts",
    ],
    deps = [
        "@rules_typescript_proto_deps//minimist", 
        "@rules_typescript_proto_deps//@types/node"
    ],
)
